# backend-api

./: cookiecutter-config-file.yml  docker-compose.yml
backend /app/: .flake8  .gitgnore  pyproject.toml
backend /app/alembic/: script.py.mako
backend /app/alembic/versions/: revision.py
backend /app/app/: initial_data.py  utils.py
backend /app/app/core/: celery_app.py  config.py  security.py
backend /app/app/crud/: base.py  crud_item.py
backend /app/app/dbase/: base.py
backend /app/app/dbase/db/: user.py
frontend/: .env  package-lock.json  package.json  vue.config.js
scripts/: test.sh
