[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI backend"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

# Web
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
gunicorn = "^21.2.0"
jinja2 = "^3.1.3"

# Auth / Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^2.1.0"
python-multipart = "^0.0.9"

# DB
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"

# Async / Utils
requests = "^2.31.0"
tenacity = "^8.2.3"

# Background jobs
celery = "^5.3.6"

# Emails
emails = "^0.6"

# Monitoring (modern Sentry)
sentry-sdk = "^1.40.0"

# Validation
pydantic = "^1.10.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
black = "^24.1.0"
isort = "^5.13.2"
autoflake = "^2.2.1"
flake8 = "^7.0.0"
sqlalchemy-stubs = "^0.4"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
